refactor, changed external layout to grid, full responsive

--- a/src/components/button/follow-button/follow-button.component.scss
+++ b/src/components/button/follow-button/follow-button.component.scss
@@ -5,9 +5,8 @@
 
     background-color: $primary-light;
     color: white;
-    width: 10rem;
-
-    padding: .8rem 2.5rem;
+    text-align: center;
+    padding: .8rem 2.5vw;
     letter-spacing: .05rem;
 
     transition: all .1s;
