--- a/src/components/button/form-button/form-button.component.scss
+++ b/src/components/button/form-button/form-button.component.scss
@@ -5,7 +5,7 @@
     text-transform: uppercase;
     
     border-radius: .2rem;
-    padding: 1.5vh 3vh;
+    padding: 3vh;
     font-size: 1.4rem;
     
     color: $white;
