--- a/src/components/explore/ui/dropdown/dropdown.component.scss
+++ b/src/components/explore/ui/dropdown/dropdown.component.scss
@@ -1,8 +1,10 @@
 @import "../../../../assets/sass/variables";
+@import "../../../../assets/sass/mixins";
+
 
 .dropdown {
     cursor: pointer;
-
+    
     position: relative;
 
     &__img {
