--- a/src/components/post-modal/post-modal.component.scss
+++ b/src/components/post-modal/post-modal.component.scss
@@ -1,4 +1,5 @@
 @import "../../assets/sass/variables";
+@import "../../assets/sass/mixins";
 
 .post-modal {
     position: fixed;
@@ -12,12 +13,18 @@
     display: grid;
     grid-template-columns: minmax(2rem, 1fr) repeat(6, [col-start] minmax(8vw, 15rem) [col-end]) minmax(2rem, 1fr);
     grid-template-rows: minmax(2rem, 1fr) repeat(6, [row-start] minmax(5rem, 8rem) [row-end]) minmax(2rem, 1fr);
-    
+
+    @include respond(phone){
+        grid-template-columns: minmax(4rem, 1fr) repeat(6, [col-start] minmax(8vw, 15rem) [col-end]) minmax(4rem, 1fr);
+        grid-template-rows: minmax(2rem, 1fr) repeat(6, [row-start] minmax(5rem, 9rem) [row-end]) minmax(2rem, 1fr);
+    }
+
+
     &__content{
         background-color: rgba($grey-light-blue,1);
         grid-column: col-start 1 / col-end 6;
         grid-row: row-start 1 / row-end 6;
-        border-radius: 2rem;
+        border-radius: .5rem;
     }
     
 }
