--- a/src/components/post-modal/view-post-modal/view-post-modal.component.scss
+++ b/src/components/post-modal/view-post-modal/view-post-modal.component.scss
@@ -1,69 +1,70 @@
-    .view-post-modal {
-        max-width: 100%;
-        max-height: 100%;
-        display: grid;
-        grid-template-columns: repeat(10, 1fr);
-        grid-template-rows: repeat(10, 1fr);
+@import "../../../assets/sass/mixins";
 
+.view-post-modal {
+    height: 100%;
+    
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, min-content) 1fr; 
 
+    overflow: scroll;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+    .user{
+        padding: 1.5rem;
+        @include respond(phone){
+            grid-column: 1/-1;
+        }
+    }
+
+    &__img {
+        display: block;
+        grid-column: 1 / 2;
+        grid-row: 1 / -1;
+        width: 100%;
+        height: 100%;
+        object-fit:fill;
+
+        @include respond(phone){
+            grid-column: 1 / -1;
+            grid-row: 2 / 3;
+            max-height: 40rem;
+        }
+    }
+
+    &__info{
+        @include respond(phone) {
+            grid-column: 1 / -1;
+            grid-row: 3 / -1;
+        }
         svg {
+            cursor: pointer;
             height: 2rem;
             width: 2rem;
+            margin-left: 2rem;
             &:hover {
-                color: #ccc;
+                color: #fd1d60;
             }
         }
-
         .description {
-            &__text {
-                font-size: 1rem;
-                font-weight: 400;
-                padding: 1rem;
+            display: flex;
+            align-items: center;
+            padding: 1rem 2rem;
+            .paragraph{
+                white-space: nowrap;
+                margin-right: 1rem;
             }
-
-            grid-row: 3 / 4;
-            grid-column: 7 / -1;
-            padding: 2rem;
         }
-
-        &__img {
-            grid-column: 1 / 7;
-            grid-row: 1 / -1;
-            width: 100%;
-            height: 100%;
-            display: block;
-            object-fit: auto;
-            border-top-left-radius: 2rem;
-            border-bottom-left-radius: 2rem;
+        .likes-count{
+            margin: 2rem;
         }
-
-        .user {
-            grid-column: 7 / -1;
-            grid-row: 1 / 3;
-            padding: 1rem;
-        }
-
-        .likes,
-        .comments {
-            font-size: 1rem;
-            grid-column: 7 / -1;
-            grid-row: 5 / -1;
-            padding: 0 2rem;
-            overflow: scroll;
-            &::-webkit-scrollbar{
-                display: none;
-            }
-
-            .heading-4 {
-                grid-row: 5 / 6;
-            }
-
-            ul {
-                padding: .5rem;
-
-                li {
-                    padding: 1rem;
-                }
+        .comments{
+            padding: .5rem 2rem;
+            .comment{
+                margin: 2rem 0;
             }
         }
     }
+}
