--- a/src/assets/sass/_mixins.scss
+++ b/src/assets/sass/_mixins.scss
@@ -1,5 +1,20 @@
 @import "./variables";
 
+
+
+@mixin respond($break-point){
+    @if $break-point == phone {
+        @media only screen and (max-width:$bp-phone) {
+            @content
+        }
+    }
+    @if $break-point == tablet {
+        @media only screen and (max-width:$bp-tablet) {
+            @content
+        }
+    }
+}
+
 @mixin flexBetween {
     display: flex;
     align-items: center;
