--- a/src/components/account/account.component.scss
+++ b/src/components/account/account.component.scss
@@ -5,6 +5,11 @@
 
     flex: 1;
     width: 100%;
+    margin-bottom: 2rem;
+
+    @include respond(phone){
+        display: none;
+    }
     
     &__head{
         cursor: pointer;
