--- a/src/components/explore/explore.component.scss
+++ b/src/components/explore/explore.component.scss
@@ -3,13 +3,22 @@
 @import "../../assets/sass/utils";
 
 .explore {
+    height: 100%;
+
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100%;
+    
     padding: 4rem 0;
-    flex: 0.75;
+    
+    flex: 3;
+
+    @include respond(tablet){
+        flex: 1;
+        padding: 2rem .1rem;
+        display: none;
+    }
 
     &__nav{
         display: flex;
@@ -17,9 +26,11 @@
         justify-content: center;
         gap: 2rem;
         margin-bottom: 3rem;
+        width: 100%;
 
-
-
+        @include respond(tablet){
+            flex-direction: column;
+        }
     }
 
     &__link {
@@ -36,7 +47,9 @@
         margin: 2.5rem auto;
         width: 85%;
         opacity: 0.3;
+        @include respond(tablet) {
+            display: none;
+        }
     }
-
 
 }
