--- a/src/components/explore/ui/search-box/search-box.component.scss
+++ b/src/components/explore/ui/search-box/search-box.component.scss
@@ -3,13 +3,21 @@
 @import "../../../../assets/sass/variables";
 @import "../../../../assets/sass/mixins";
 .search-box {
+
     @include flexBetween;
+
     gap: 1rem;
     border: thin solid $grey;
     border-radius: 3rem;
     height: 5rem;
     padding: 0 1.5rem;
     flex: .6;
+
+    @include respond(tablet) {
+        border-radius: 50%;
+        padding: 1.1rem;
+        flex: 0;
+    }
 
     &:focus-within,
     &:hover {
@@ -32,5 +40,8 @@
         outline: none;
         background-color: inherit;
         font-size: 1.2rem;
+        @include respond(tablet) {
+            display: none;
+        }
     }
 }
