--- a/src/components/feeds/categories/categories.component.scss
+++ b/src/components/feeds/categories/categories.component.scss
@@ -1,22 +1,55 @@
 @import "../../../assets/sass/mixins";
 @import "../../../assets/sass/variables";
-
+.category-btn{
+    position: fixed;
+}
 .categories {
     @include flexBetween;
-    gap: 0 2rem;
+    gap: 0 2vw;
 
-    font-size: 1.5rem;
+    font-size: clamp(1rem, 1.5rem, 2vw);
     font-weight: 500;
 
     color: rgba($secondary, 0.3);
 
-    &>li {
+    // @include respond(tablet) {
+    //     border: none;        
+    //     outline: none;
+    //     background-color: $primary;
+    //     color: #fff;
+    //     border-radius: .5rem;
+    //     font-size: 1.2rem;
+    //     display: flex;
+    //     flex-direction: column;
+    //     text-align: center;
+    //     position: absolute;
+    //     right: 1rem;
+    //     top: 1rem;
+    //     z-index: 2;
+    // }
+
+    text-transform: uppercase;
+
+    .category {
         cursor: pointer;
-        text-transform: uppercase;
+        width: 100%;
 
         &:hover,
         &.active {
-            color: $primary;
+            color:$primary;
+            // @include respond(tablet) {
+            //     color: #fff;
+            //     background-color: $grey-light-blue;
+            //     display: block;
+            //     &::after {
+            //         content: '\25bc';
+            //         margin-left: 2rem;
+            //     }
+            // }
         }
+
+        // @include respond(tablet){
+        //     padding: 2rem;
+        // }
     }
 }
