--- a/src/components/feeds/feeds.component.scss
+++ b/src/components/feeds/feeds.component.scss
@@ -1,9 +1,9 @@
 @import "../../assets/sass/mixins";
 
 .feeds {
-    flex-grow: 1;
-    max-height: 100%;
+    flex: 4;
     padding: 2rem 0;
+    position: relative;
     
     overflow-y: scroll;
     &::-webkit-scrollbar {
