--- a/src/components/form/form.component.scss
+++ b/src/components/form/form.component.scss
@@ -2,7 +2,7 @@
     width: 100%;
     padding: 4vh;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 25rem));
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     justify-content: center;
     gap: 3vh;
 }
