--- a/src/components/logo/logo.component.scss
+++ b/src/components/logo/logo.component.scss
@@ -16,7 +16,8 @@
     &__text {
  
         letter-spacing: .1rem;
-        font-size: clamp(1rem, 5vh, 3.5rem);
+        // font-size: clamp(1rem, 5vh, 3.5rem);
+        font-size: 3.5rem;
         font-weight: 800;
     }
 }
