--- a/src/components/post-modal/create-post-modal/create-post-modal.component.scss
+++ b/src/components/post-modal/create-post-modal/create-post-modal.component.scss
@@ -1,28 +1,32 @@
 @import "../../../assets/sass/variables";
+@import "../../../assets/sass/mixins";
 
 .create-post-modal {
+    
     padding: 8rem;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 4rem;
 
     height: 100%;
-    .form {
-        height: 100%;
-        grid-template-columns: repeat(auto-fit, minmax(min-content, 1fr));
-    }
 
     .description__input{
         width: 100%;
+        padding: 2rem;
     }
     
     .form-group{
         grid-column: 1 / -1;
     }
 
-    &__form{ 
+    .form{
+        gap: 2rem;
+        // grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    }
 
+    &__form{ 
         &__btn{
             grid-column: 1 / -1;
         }
