--- a/src/components/user-details/user-details.component.scss
+++ b/src/components/user-details/user-details.component.scss
@@ -1,13 +1,16 @@
+@import "../../assets/sass/mixins";
+
 .user-details {
     padding: 2rem;
     font-size: 1.5rem;
     width: 70%;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
     align-items: center;
     justify-items: flex-start;
-    gap: 3rem 2rem;
+    gap: 4rem;
+
 
     .user {
         margin-left: -2rem;
