--- a/src/pages/home/home.page.scss
+++ b/src/pages/home/home.page.scss
@@ -2,16 +2,17 @@
 @import "../../assets/sass/mixins";
 
 .home {
-    font-size: 2rem;
-    
     height: 100%;
-    width: 100%;
+    // flex: 8 1 100%;
+    grid-column: page-start 1 / -1;
     overflow: hidden;
-    background-color: $grey-light-blue;
-
+    max-width: 100%;
     @include flexBetween;
-    
-    box-shadow: 0 10px 10px $grey;
+
+    @include respond(phone){
+        grid-row: 1/2;
+        grid-column: 1/-1;
+    }
 
     .vl{
         width: .01rem;
@@ -25,11 +26,14 @@
         flex-direction: column;
         justify-content: stretch;
         align-items: stretch;
-        flex: 1.75 0 0;
+
         padding: 2rem;
+
+        flex: 7;
+
         height: 100%;
-        position: relative;
         overflow: hidden;
+        position: relative;
     }
 
 } 
