--- a/src/pages/profile/profile.page.scss
+++ b/src/pages/profile/profile.page.scss
@@ -3,29 +3,32 @@
 
 .profile {
     height: 100%;
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-    background-color: $grey-light-blue;
+    grid-column: page-start 1 / -1;
+    max-width: 100%;
 
-    @include flexBetween;
-
-    &__section{
-        flex: 2;
-        height: 100%;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        overflow-y: scroll;
-        gap: 2rem;
-        
-        &::-webkit-scrollbar {
-            display: none;
-        }
+    overflow: scroll;
+    &::-webkit-scrollbar{
+        display: none;
     }
 
+    @include respond(phone){
+        grid-row: 1 / 2;
+        grid-column: 1/-1;
+    }
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 2rem;
+
+    @include respond(phone){
+        flex: 4;
+    }
+    
+    &::-webkit-scrollbar {
+        display: none;
+    }
     .posts {
         .spinner {
             margin-top: 5rem;
@@ -36,4 +39,5 @@
             }
         }
     }
+    
 }
