added postcss, refactored

--- a/src/pages/login/login.page.scss
+++ b/src/pages/login/login.page.scss
@@ -1,7 +1,9 @@
-// @use "assets/sass/style";
-
 .login {
-    background: linear-gradient(90deg, $secondary 0%, $primary 100%);
+    // background: linear-gradient(90deg, $primary-light 0%, $grey-light-blue 100%);
+    // background: rgb(231, 245, 251);
+    // background: radial-gradient(circle, $grey-light-blue 0%, $primary 50%);
+    background: rgb(231, 245, 251);
+        background: radial-gradient(circle, rgba(231, 245, 251, 1) 2%, rgba(32, 42, 72, 1) 7%, rgba(166, 86, 225, 1) 100%);
 
     grid-column: 1/-1;
     grid-row: 1/-1;
