fix login component

--- a/src/pages/login/login/login.component.scss
+++ b/src/pages/login/login/login.component.scss
@@ -3,7 +3,7 @@
 .login-form {
     padding: 4vh;
     min-width: 35rem;
-    grid-template-columns: min-content;
+    grid-template-columns: min-content !important;
     .extras {
         @include flexBetween;
         gap: .5vh;
