fix postcss, styles & resetpassword

--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -14,7 +14,9 @@
 html {
     font-size: 62.5%;
     box-sizing: border-box;
-    overflow: hidden;
+    @include respond(phone){
+        font-size: 50%;
+    }
 }
 
 body {
