--- a/src/components/display/form/form.component.scss
+++ b/src/components/display/form/form.component.scss
@@ -2,12 +2,14 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     justify-content: center;
-    gap: 3vh;
+    gap: 1.5rem;
 
     min-width: 30vw;
-    height: 100%;
+    // height: 100%;
     
     .form-button {
         grid-column: 1 / -1;
     }
+
+
 }
