--- a/src/components/button/form-button/form-button.component.scss
+++ b/src/components/button/form-button/form-button.component.scss
@@ -5,8 +5,8 @@
     text-align: center;
     text-transform: uppercase;
     
-    border-radius: .2rem;
-    padding: 3vh;
+    border-radius: .5rem;
+    padding: 2rem;
     font-size: 1.4rem;
     
     color: $white;
