--- a/src/pages/login/reset-password/reset-password.component.scss
+++ b/src/pages/login/reset-password/reset-password.component.scss
@@ -1,3 +1,10 @@
+.reset-password {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    gap: 2rem;
+}
+
 .reset-form{
     padding: 2rem;
     grid-template-columns: none;
