--- a/src/pages/profile/user-details/user-details.component.scss
+++ b/src/pages/profile/user-details/user-details.component.scss
@@ -1,8 +1,9 @@
 // @use "assets/sass/style";
 .user-details {
-    padding: 1rem;
+    padding: 1rem 2rem;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    gap: 4rem;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    justify-items: center;
+    gap: 3rem;
 }
