--- a/src/components/posts/posts.component.scss
+++ b/src/components/posts/posts.component.scss
@@ -1,6 +1,6 @@
 .posts{
     position: relative;
-    height: 100%;
+    max-height: 100%;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
