--- a/src/pages/login/login.page.scss
+++ b/src/pages/login/login.page.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
 
-    // height: 100%;
+    position: relative;
     @include scroll;
 
     .form-box{
@@ -27,6 +27,8 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
+
+        max-height: 100%;
 
         .spinner { margin-top: 15rem; }
 
