--- a/src/pages/messages/messages.page.scss
+++ b/src/pages/messages/messages.page.scss
@@ -5,7 +5,7 @@
 
     display: grid;
     grid-template-columns: [friends-start] minmax(15rem, 20rem) [friends-end messages-start] 1fr [messages-end];
-    grid-template-rows: 1fr 5rem;
+    grid-template-rows: 1fr min-content;
 
     @include respond(phone) {
         grid-template-columns: 1fr;
