--- a/src/pages/profile/profile.page.scss
+++ b/src/pages/profile/profile.page.scss
@@ -3,8 +3,6 @@
     
     @include page;
     
-    @include scroll;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,14 +18,24 @@
         text-decoration: none;
     }
 
-    .posts {
-        flex: 1 0 auto;
-        .spinner {
-            margin-top: 5rem;
-        }
-        .post__info {
-            .user {
-                display: none;
+    .posts-section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+        @include scroll;
+        
+        .posts {
+            margin: 1rem;
+            overflow: visible;
+            flex: 1 0 200px;
+            .spinner {
+                margin-top: 5rem;
+            }
+            .post__info {
+                .user {
+                    display: none;
+                }
             }
         }
     }
