--- a/src/pages/profile/user-details/user-detail/user-detail.component.scss
+++ b/src/pages/profile/user-details/user-detail/user-detail.component.scss
@@ -2,16 +2,18 @@
 
 .user-detail {
     font-size: 1.2rem;
-
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 1rem;
-
-    svg {
-        width: 2rem;
-        height: 2rem;
+    p {
+        flex: 1 1 content;
+    }
+    span {
+        svg {
+            height: 2rem;
+            width: 2rem;
+        }
         color: $primary;
     }
-    
 }
