--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 
 .app {
     height: 100vh;
+    width: 100vw;
     @include respond(phone) {
         height: 100vh;
         min-height: -webkit-fill-available;
