--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -14,7 +14,7 @@
 html {
     font-size: 62.5%;
     box-sizing: border-box;
-    overflow: hidden;
+    @include scroll;
     @include respond(phone){
         font-size: 50%;
     }
