--- a/src/pages/profile/profile.page.scss
+++ b/src/pages/profile/profile.page.scss
@@ -2,6 +2,7 @@
     padding-top: 4rem;
     
     @include page;
+    @include scroll;
     
     display: flex;
     flex-direction: column;
@@ -23,7 +24,7 @@
         flex-direction: column;
         align-items: center;
         gap: 2rem;
-        @include scroll;
+        width: 100%;
         
         .posts {
             margin: 1rem;
