--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -8,6 +8,9 @@
     margin: 0;
     padding: 0;
     box-sizing: inherit;
+    user-select: none;
+    -webkit-user-select: none;
+    
 }
 
 
@@ -15,6 +18,7 @@ html {
     font-size: 62.5%;
     box-sizing: border-box;
     @include scroll;
+    // overflow: hidden;
     @include respond(phone){
         font-size: 50%;
     }
@@ -29,6 +33,12 @@ body {
 ol,
 ul {
     list-style: none;
+}
+
+span, p {
+    user-select: none;
+    pointer-events: none;
+    cursor: default;
 }
 
 a {
