--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 @import "assets/sass/base";
 
 .app {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     @include respond(phone) {
         height: 100vh;
         min-height: -webkit-fill-available;
