--- a/src/components/display/spinner/spinner.component.scss
+++ b/src/components/display/spinner/spinner.component.scss
@@ -1,32 +1,20 @@
 @keyframes spinner {
-    0% {
-        transform: translate3d(-50%, -50%, 0) rotate(0deg);
-    }
-
-    100% {
-        transform: translate3d(-50%, -50%, 0) rotate(360deg);
-    }
+    0% { transform: translate3d(-50%, -50%, 0) rotate(0deg); }
+    100% { transform: translate3d(-50%, -50%, 0) rotate(360deg); }
 }
 
-.spinner{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 100%;
-}
-
-.spinner::before {
-    animation: 1.5s linear infinite spinner;
-    animation-play-state: inherit;
-    border: solid 5px #cfd0d1;
-    border-bottom-color: $primary;
-    border-radius: 50%;
-    content: "";
-    height: 40px;
-    width: 40px;
-    position: absolute;
-    // top: 10%;
-    // left: 10%;
-    transform: translate3d(-50%, -50%, 0);
-    will-change: transform;
+.spinner {
+    position: relative;
+    &::before {
+        content: "";
+        position: absolute;
+        width: var(--radius);
+        height: var(--radius);
+        border: solid 5px #cfd0d1;
+        border-bottom-color: $primary;
+        border-radius: 50%;
+        will-change: transform;
+        animation: 1.5s linear infinite spinner;
+        animation-play-state: inherit;
+    }
 }
