--- a/src/components/feeds/categories/categories.component.scss
+++ b/src/components/feeds/categories/categories.component.scss
@@ -4,51 +4,14 @@
 }
 .categories {
     @include flexBetween;
-    gap: 0 2vw;
-
-    font-size: clamp(1rem, 1.5rem, 2vw);
+    gap: 2rem;
+    font-size: 1.2rem;
     font-weight: 500;
-
     color: rgba($secondary, 0.3);
-
-    // @include respond(tablet) {
-    //     border: none;        
-    //     outline: none;
-    //     background-color: $primary;
-    //     color: #fff;
-    //     border-radius: .5rem;
-    //     font-size: 1.2rem;
-    //     display: flex;
-    //     flex-direction: column;
-    //     text-align: center;
-    //     position: absolute;
-    //     right: 1rem;
-    //     top: 1rem;
-    //     z-index: 2;
-    // }
-
     text-transform: uppercase;
-
     .category {
         cursor: pointer;
         width: 100%;
-
-        &:hover,
-        &.active {
-            color:$primary;
-            // @include respond(tablet) {
-            //     color: #fff;
-            //     background-color: $grey-light-blue;
-            //     display: block;
-            //     &::after {
-            //         content: '\25bc';
-            //         margin-left: 2rem;
-            //     }
-            // }
-        }
-
-        // @include respond(tablet){
-        //     padding: 2rem;
-        // }
+        &:hover, &.active { color:$primary; }
     }
 }
