--- a/src/components/posts/posts.component.scss
+++ b/src/components/posts/posts.component.scss
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     justify-items: center;
+    align-items: center;
     gap: 6rem 3rem;
     padding: 0 3rem;
     margin: 2rem 0;
