--- a/src/pages/login/login.page.scss
+++ b/src/pages/login/login.page.scss
@@ -27,7 +27,7 @@
 
         max-height: 100%;
 
-        .spinner { margin-top: 15rem; }
+        .spinner { margin: 4rem; }
 
         p { font-size: clamp(1.3rem, 1.3rem, 2rem); }
         
