--- a/src/components/display/spinner/spinner.component.scss
+++ b/src/components/display/spinner/spinner.component.scss
@@ -4,17 +4,16 @@
 }
 
 .spinner {
-    position: relative;
-    &::before {
-        content: "";
-        position: absolute;
-        width: var(--radius);
-        height: var(--radius);
-        border: solid 5px #cfd0d1;
-        border-bottom-color: $primary;
-        border-radius: 50%;
-        will-change: transform;
-        animation: 1.5s linear infinite spinner;
-        animation-play-state: inherit;
-    }
+    position: absolute;
+    width: var(--radius);
+    height: var(--radius);
+    border: solid 5px #cfd0d1;
+    border-bottom-color: $primary;
+    border-radius: 50%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    will-change: transform;
+    animation: 1.5s linear infinite spinner;
+    animation-play-state: inherit;
 }
